# PhasedArrayUltrasonic

./: CMakeLists.txt  LISENSE.MD  PhasedArrayPulses.hpp  README.md
2DArray/Software/2DPhasedArray/: ADCRead.cpp  CMakeLists.txt  PIO_constants.hpp  PhasedArrayPulses.cpp  PhasedArrayPulses.hpp  pulses.pio  twoDPhasedArray.cpp
2DArray/Software/2DPhasedArray/pulses_pio/: pulses_pio.cpp  pulses_pio.hpp
3DArray/Hardware/phased_array_ultrasonic_row/: SixSpeakers.kicad_sch  fp-lib-table  phased_array_ultrasonic_row.kicad_pcb  phased_array_ultrasonic_row.kicad_prl  phased_array_ultrasonic_row.kicad_sch
3DArray/Software/: ADCRead.hpp  CMakeLists.txt  PhasedArrayPulses.cpp  PhasedArrayPulses.hpp  threeDPhasedArray.cpp
3DArray/Software/pulses_pio/: pulses.pio
Hardware/phased_array_ultrasonic_row/: .gitignore  fp-info-cache  phased_array_ultrasonic.kicad_prl  phased_array_ultrasonic.kicad_sch-bak  phased_array_ultrasonic_row.kicad_pcb  phased_array_ultrasonic_row.kicad_pro  phased_array_ultrasonic_row.kicad_sch  phased_array_ultrasonic_row.xml  sym-lib-table  twospeakers.kicad_sch
LinearArray/Software/: ADCRead.cpp  PhasedArrayPulses.cpp  linearArray.cpp  pio_irh.cpp  twoDPhasedArray.cpp
LinearArray/Software/pulses_pio/: pulses_pio.cpp  pulses_pio.hpp
Report/: Report.md
Report/figures/: UltrasonicPhasedArrayBlockDiagram.drawio
Software/: CMakeLists.txt  PhasedArrayPulses.cpp  PhasedArrayPulses.hpp  threeDPhasedArray.cpp
Software/pulses_pio/: pulses.pio  pulses_pio.cpp
pulses_pio/: pulses.pio  pulses_pio.hpp
